@@ -13,7 +13,7 @@ class dstat_cpufreq(dstat.dstat):
 		if self.vars:
 			for cpu in self.vars:
 				if not os.access('/sys/devices/system/cpu/'+cpu+'/cpufreq/cpuinfo_cur_freq', os.R_OK):
-					raise Exception, 'Module cannot access acpi cpu frequency information.'
+					raise Exception, 'Module cannot access acpi cpu frequency information'
 					return False
 			return True
 		return false
